Correct tag errors and spacing

--- a/frontend/src/css/components/dream.scss
+++ b/frontend/src/css/components/dream.scss
@@ -184,34 +184,39 @@
             border: 2px solid $magenta;
         }
 
-        .tag-search-results-outer-container {
+        .tag-search-results-wrapper {
             position: absolute;
             top: 39px;
-            left: 32px;
+            left: 30px;
             background-color: white;
             z-index: 10;
             max-height: 350px;
             overflow-y: scroll;
             width: 80%;
-            border-bottom: 2px solid $dark-gray;
-            border-right: 2px solid $dark-gray;
-            border-left: 2px solid $dark-gray;
-
-            .tag-search-results-inner-container {
-                padding: 5px;
-                font-family: $sans-serif;
-                font-size: 16px;
-                color: $dark-gray;
+            border-bottom: 2px solid $magenta;
+            border-right: 2px solid $magenta;
+            border-left: 2px solid $magenta;
+            
+        
+            .tag-search-results-outer-container {
                 width: 100%;
-                height: 100%;
 
-                .search-icon {
-                    padding-right: 5px;
-                }
+                .tag-search-results-inner-container {
+                    padding: 5px;
+                    font-family: $sans-serif;
+                    font-size: 16px;
+                    color: $dark-gray;
+                    width: 100%;
+                    height: 100%;
 
-                &:hover {
-                    background-color: $magenta;
-                    color: $off-white;
+                    .search-icon {
+                        padding-right: 5px;
+                    }
+
+                    &:hover {
+                        background-color: $magenta;
+                        color: $off-white;
+                    }
                 }
             }
         }
@@ -241,13 +246,11 @@
 @media (min-width: 700px) {
     .new-dream-container {
 
-            .create-dream-container {
+        .create-dream-container {
 
-                .tag-search-results-outer-container {
-                    width: 84%;
-                    top: 39px;
-                    left: 39px;
-
+            .tag-search-results-wrapper {
+                top: 40px;
+                left: 60px;
             }
         }
     }
